--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 .jumbotron_home,
 .jumbotron_about,
 .jumbotron_news {
@@ -39,3 +43,9 @@
   border-bottom: 2px solid;
 }
 
+.card-text-custom {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
